fix: :box: refactor Navbar component styles for list item layout, alignment and hover activation zone

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -66,13 +66,19 @@
         align-items: center;
         justify-content: space-around;
 
-        li a {
-            text-decoration: none;
-            color: var.$primary-color;
-            font-size: 2.5dvh;
-            font-weight: 500;
-            text-transform: uppercase;
-            text-align: left;
+        li {
+            height: 100%;
+            display: flex;
+            align-items: center;
+
+            a {
+                text-decoration: none;
+                color: var.$primary-color;
+                font-size: 2.5dvh;
+                font-weight: 500;
+                text-transform: uppercase;
+                text-align: left;
+            }
         }
 
         /* Contenedor para detectar el hover sobre el dropdown y el submenu */
